@@ -1,10 +1,11 @@
 *** 1.0.4 / 2007-03-24
 + 1 major enhancement:
   + Cached rendering result of meteor/strike.
-+ 3 minor enhancements:
++ 4 minor enhancements:
   + Disabled caching when back.
   + Added meteor_helper.
   + Added workaround for Safari's strange behaviour after back navigation.
+  + Added timer to remove forsaken iframes for Safari.
 + 1 minor bugfix:
   + Solved problem on caching of browsers of MacOS.
 
